# MLOps

./: .gitignore  README.md  Ulysse.ipynb  app.py  build.sh  cv_issue-pipeline.pkl  price_prediction_pipeline.pkl  pyproject.toml  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
mlruns/0/: meta.yaml
mlruns/1/: meta.yaml
mlruns/1/10fe6859b8b3468c92e4f6489b475b8a/: meta.yaml
mlruns/1/10fe6859b8b3468c92e4f6489b475b8a/artifacts/: Results.html
mlruns/1/10fe6859b8b3468c92e4f6489b475b8a/metrics/: MAE  MAPE  MSE  R2  RMSE  RMSLE  TT
mlruns/1/10fe6859b8b3468c92e4f6489b475b8a/tags/: Run ID  URI  mlflow.log-model.history
mlruns/1/390017ce653b408b82b8fbeabe9c6597/: meta.yaml
mlruns/1/390017ce653b408b82b8fbeabe9c6597/artifacts/: Results.html
mlruns/1/390017ce653b408b82b8fbeabe9c6597/metrics/: MAE  MAPE  MSE  R2  RMSE  RMSLE  TT
mlruns/1/390017ce653b408b82b8fbeabe9c6597/tags/: Run ID  URI  mlflow.log-model.history
mlruns/1/51ce0336812b42fbaae7f6378fc08a7c/: meta.yaml
mlruns/1/51ce0336812b42fbaae7f6378fc08a7c/artifacts/: Results.html
mlruns/1/51ce0336812b42fbaae7f6378fc08a7c/metrics/: MAE  MAPE  R2  (+4 more)
mlruns/1/5665d3f8f6e74146ae59908425cf241a/: meta.yaml
mlruns/1/7969f13daa4e43e2b683d78515406287/: meta.yaml
mlruns/1/91da057e12b248299a9d14ee1342ceab/: meta.yaml
mlruns/1/de07b8208b4641489f5f9fc023651967/: meta.yaml
mlruns/2/: meta.yaml
mlruns/2/8deec9957f874038b8798141e73620dc/: meta.yaml
static/: home.css  style.css
templates/: cardiovascular.html  hdb.html  home.html
(+86 files in other folders)
